--- a/src/app/shared/components/video/video.component.html
+++ b/src/app/shared/components/video/video.component.html
@@ -1,7 +1,7 @@
 <section class="card">
     <article class="card-body">
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/aj_4Hw8c6Yk" 
+            <iframe class="embed-responsive-item" [src]="urlVideo | domSeguro" 
                 allowfullscreen></iframe>
         </div>
     </article>
