--- a/src/app/pages/mantenimientos/personaje-conf/personaje-conf.component.html
+++ b/src/app/pages/mantenimientos/personaje-conf/personaje-conf.component.html
@@ -1,1 +1,115 @@
-<p>personaje-conf works!</p>
+<article class="panel-header px-3 px-sm-5">
+    <div class="header text-center">
+        <h2 class="title">Personajes</h2>
+        <section class="d-flex justify-content-between align-items-center">
+            <article class="input-group no-border mb-0 w-25" [formGroup]="formPersonaje">
+                <input type="text" class="form-control font-weight-bold" 
+                    placeholder="Buscar..." formControlName="search">
+                <div class="input-group-append">
+                  <div class="input-group-text">
+                    <i class="fas fa-search text-dark"></i>
+                  </div>
+                </div>
+            </article>
+            <article>
+                <button class="btn btn-dark bg-dark" data-toggle="modal" 
+                  data-target="#modal-personaje" (click)="handleCreatePersonaje()">
+                  Agregar
+                </button>
+            </article>
+        </section>
+    </div>
+</article>
+
+<article class="u-content">
+    <section class="card">
+        <div class="card-body">
+            <section class="tables-responsive">
+                <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col" class="px-3 font-weight-normal">Nombre</th>                        
+                        <th scope="col" class="px-3 font-weight-normal">Actor</th>
+                        <th scope="col" class="px-3 font-weight-normal">Pelicula</th>
+                        <th scope="col" class="px-3 font-weight-normal">Acciones</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let personaje of personajes$ | async">
+                        <td class="px-3">{{ personaje.personaje | titlecase }}</td>
+                        <td class="px-3">{{ personaje.actor }}</td>
+                        <td class="px-3">{{ personaje.pelicula }}</td>
+                        <td>
+                            <div class="btn-group">
+                                <button class="btn btn-outline-default" data-toggle="modal" 
+                                    data-target="#modal-personaje" (click)="handleEditPersonaje(personaje)">
+                                    <i class="fas fa-pencil-alt"></i>
+                                </button>
+                                <button class="btn btn-outline-danger" (click)="deletePersonaje(personaje.id)">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>
+                            </div>
+                        </td>
+                      </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
+    </section>
+</article>
+
+<article class="modal fade" id="modal-personaje" aria-hidden="true">
+    <div class="modal-dialog">
+        <article class="modal-content">
+            <section class="modal-header">
+                <h5 class="modal-title">Mantenimiento de Personaje</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </section>
+            <section class="modal-body" [formGroup]="formPersonaje">
+                <article class="form-group">
+                    <label for="">Nombre</label>
+                    <input type="text" class="form-control" 
+                        formControlName="nombre">
+                    <p class="text-danger mb-2 d-none" 
+                        [class.d-block]="hasErrorRequired('nombre')">
+                        <small>No puede ser vacío</small>
+                    </p>  
+                </article>
+                <article class="form-group">
+                    <label for="">Actor</label>
+                    <select class="form-control" formControlName="idActor">
+                        <option value="">Seleccionar actor</option>
+                        <option *ngFor="let actor of actores$ | async" [value]="actor.id">
+                            {{ actor.nombres }} {{ actor.apellidos }}
+                        </option>
+                    </select>
+                    <p class="text-danger mb-2 d-none" 
+                        [class.d-block]="hasErrorRequired('idActor')">
+                        <small>No puede ser vacío</small>
+                    </p>  
+                </article>
+                <article class="form-group">
+                    <label for="">Pelicula</label>
+                    <select class="form-control" formControlName="idPelicula">
+                        <option value="">Seleccionar pelicula</option>
+                        <option *ngFor="let pelicula of peliculas$ | async" [value]="pelicula.id">
+                            {{ pelicula.nombre }}
+                        </option>
+                    </select>
+                    <p class="text-danger mb-2 d-none" 
+                        [class.d-block]="hasErrorRequired('idPelicula')">
+                        <small>No puede ser vacío</small>
+                    </p>  
+                </article>
+            </section>
+            <section class="modal-footer">
+                <button type="button" class="btn btn-primary"
+                    (click)="savePersonaje()" [disabled]="formPersonaje.invalid">
+                    Guardar
+                </button>
+            </section>
+        </article>
+    </div>
+</article>
