--- a/src/app/pages/peliculas/pelicula-detalle-video/pelicula-detalle-video.component.html
+++ b/src/app/pages/peliculas/pelicula-detalle-video/pelicula-detalle-video.component.html
@@ -38,3 +38,9 @@
 <article class="u-content">
   <app-video [urlVideo]="pelicula.url_video"></app-video>
 </article>
+
+<article class="c-float__container">
+    <button class="c-float__btn" routerLink="/dashboard/peliculas">
+        <i class="fas fa-arrow-left"></i>
+    </button>
+</article>
