--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,6 +11,7 @@
 //06-COMPONENTS
 @import './components/c-auth';
 @import './components/c-card';
+@import './components/c-btn-float';
 //07-UTILITIES
 @import './utilities/u-overwrite-sidebar';
 @import './utilities/u-overwrite-panel-header';
