add two componentes

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -105,6 +105,18 @@
             <p class="font-weight-bold">Estudios</p>
           </a>
         </li>        
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard/mantenimientos/episodios">
+            <i class="fas fa-cog"></i>
+            <p class="font-weight-bold">Episodios</p>
+          </a>
+        </li>        
+        <li routerLinkActive="active">
+          <a routerLink="/dashboard/mantenimientos/temporadas">
+            <i class="fas fa-cog"></i>
+            <p class="font-weight-bold">Temporadas</p>
+          </a>
+        </li>        
       </ul>
     </div>
 </section>
